# pyjamaz

./: .gitignore  CLAUDE.md  README.md  build.zig  build.zig.zon  conformance_output.txt
.claude/commands/: code-review-png.md
.github/workflows/: build-nodejs.yml  build-wheels.yml
bindings/nodejs/: install.js  package.json
bindings/nodejs/examples/: test-bundled-package.ts
bindings/nodejs/src/: bindings.ts  types.ts
bindings/python/: MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/examples/: test_bundled_package.py
bindings/python/pyjamaz/: __init__.py
bindings/python/tests/: test_pyjamaz.py
docs/: CHANGELOG.md  CONFORMANCE_TODO.md  GOLDEN_SNAPSHOTS.md  MEMORY_TESTS.md  MILESTONE4_PROGRESS.md  PYTHON_API.md  QUICKSTART.md  README.md  RELEASE.md  RFC.md  STATIC_LINKING.md  TEST_SUITES.md  TO-FIX.md  TODO.md
docs/scripts/: download_testdata.sh
examples/nodejs/: EXAMPLES_SUMMARY.md  QUICKSTART.md  README.md
examples/nodejs/basic-usage/: README.md  package.json
examples/nodejs/basic-usage/src/: index.ts
examples/nodejs/batch-processor/: README.md  package.json
examples/nodejs/batch-processor/src/: cli.ts
examples/nodejs/express-server/: README.md  package.json
examples/nodejs/express-server/src/: server.ts
examples/nodejs/web-service/: README.md  package.json
examples/nodejs/web-service/src/: server.ts
scripts/: build-nodejs-package.sh  build-python-wheel.sh  download_testdata.sh
src/: CLAUDE.md  cli.zig  codecs.zig  conformance_root.zig  discovery.zig  golden.zig  image_ops.zig  main.zig  manifest.zig  metrics.zig  naming.zig  optimizer.zig  output.zig  search.zig  test_root.zig  types.zig  vips.zig
src/codecs/: jpeg.zig  jpeg_simple.zig
src/metrics/: ssimulacra2.zig
src/test/: conformance_runner.zig  integration.zig  test_utils.zig
src/test/integration/: basic_optimization.zig  golden_snapshot.zig
src/test/unit/: codecs_encoding_test.zig  image_ops_test.zig  optimizer_test.zig  vips_test.zig
src/types/: image_buffer.zig  image_metadata.zig  transform_params.zig
