[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjamaz"
version = "1.0.1"
description = "High-performance image optimizer with perceptual quality guarantees"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["image", "optimization", "compression", "webp", "avif", "jpeg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "twine>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
# Coverage options (requires pytest-cov):
# addopts = "-v --cov=pyjamaz --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.cibuildwheel]
# Build for Python 3.8+ (CPython only, no PyPy)
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux_*"  # Skip PyPy and musl-based Linux

# Platform-specific wheels
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-build = [
    # Build Zig project first (requires Zig installed on runner)
    "cd ../.. && zig build",
    # Install libavif dependency
    "brew install libavif",
]
repair-wheel-command = ""  # Don't use delocate - we handle bundling ourselves

[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = [
    # Build Zig project
    "cd ../.. && zig build",
    # Install libavif (adjust for manylinux)
    "yum install -y libavif",
]
repair-wheel-command = "auditwheel repair --plat manylinux2014_x86_64 -w {dest_dir} {wheel}"

# Test that the wheel works
test-requires = "pytest"
test-command = "pytest {project}/tests"
